# Boundary-Element-Method

./: .gitignore  BEM_notebook.ipynb  README.md  mesher.py  meshmaker.m  pyproject.toml
HPC-scripts/Distributions/: CalcDistributions.py
HPC-scripts/Orientation-map/: MakeOrientationFit.py
HPC-scripts/Trajectories/: CalcOrientations.py  CalcOrientationsParticle.py  SampleOrientationResults.py
HPC-scripts/Useful-bash-scripts/: RunSampling.sh  RunTrajectorySim.sh  add_dist_scripts.sh  make_scale_folders.sh  make_shear_folders.sh  make_shear_in_scale.sh  run_sampling_in_scale.sh  submit_all.sh  submit_selected.sh
HPC-scripts/Velocity-fields/: SaveAsVTK.py  ViewSwimmer3D.py
HPC-scripts/setup-scripts/: CreateEuglenaObject.py  CreateMesh.py  CreateMultipleScaleOOP.py  CreateScaledOutOfPlane.py  (+2 more)
code/: Flow_Around_Chlamy_003_ComputeForceAndFlow_CORE.m  Flow_Around_Chlamy_004_SaveResults.m  Flow_Around_Chlamy_v20190117.m  main.m  test_flagellum.m
mesher-code/: mesher.py  meshing_test.py  meshmaker.m
python-code/: mesh.py
tests/: 3DStreamlineJets.py  CalcOrientationsParticle.py  CreateSwimmerObject.py  Flagellum_test.py  HelicalFlagellum.py  MakeOrientationFit.py  OpenSampledOrientation.py  Orientation_video_2.py  PlotDistributionFromnpz.py  PlotOrientationalDistribution.py  PlotStroboscopicMap.py  PlotUnitSphere.py  PlotVectorMap.py  PlotVectorMap2.py  SampleOrientationResults.py  SampledOrientationVideo.py  ScaleBeatAmplitude.py  ScaleOutOfPlaneAngle.py  SwimmerSingleFrame.py  flagellum_spline.py  main.py  orientation_video.py  testquatcondition.py
(+69 files in other folders)
