[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bemsolver"
version = "0.1.0"
description = "Boundary element solver for Stokes swimmers"
readme = "README.md"
authors = [{name="Sjoerd Buitjes"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "imageio",
    "pickle",
    "numba",
    "warnings",
    "gmsh",

]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
