[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bemsolver"
version = "1.0.0"
description = "Boundary element solver for Stokes swimmers"
readme = "README.md"
authors = [{name="Sjoerd Buitjes"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "imageio",
    "numba",
    "gmsh",
    "pyvista",
    "mpi4py>=4.1.1",
    "h5py>=3.16.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
